Finsished basic pages layout for now, added site version number to the footer.

--- a/app/views/basic_pages/about.html.erb
+++ b/app/views/basic_pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>BasicPages#about</h1>
-<p>Find me in app/views/basic_pages/about.html.erb</p>
+<%provide(:title,'About')%>
+
+<p class ="center">
+    This will be a website that demonstrates a shopping cart functionality in rails once it is finshed. This example site was created by Jeremy C Red.
+</p>
