--- a/app/views/basic_pages/contact.html.erb
+++ b/app/views/basic_pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>BasicPages#contact</h1>
-<p>Find me in app/views/basic_pages/contact.html.erb</p>
+<%provide(:title,'Contact')%>
+
+    <p class="center">
+        I can be contacted by email at zoomdude111@hotmail.com.
+    </p>
