--- a/app/views/basic_pages/home.html.erb
+++ b/app/views/basic_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>BasicPages#home</h1>
-<p>Find me in app/views/basic_pages/home.html.erb</p>
+<%provide(:title,'Home')%>
+<div class="center jumbotron">
+    <%= image_tag("shoppingcart.jpg",size:'64x64',alt:'shopping cart')%>
+    <h1>Welcome to the shopping cart example home page!</h1>
+    <p>This will be a example of a shopping cart type website in rails.</p>
+</div>
