--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= full_title(yield(:title))></title>
-    <%= csrf_meta_tags %>
+
+<head>
+  <title>
+    <%= full_title(yield(:title))%>
+  </title>
+  <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+      <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <%= render 'layouts/header'%>
-    <%= yield %>
+<body>
+  <%= render 'layouts/header'%>
+    <div class="panel panel-default content">
+      <div class="panel-body">
+        <%= yield %>
+      </div>
+    </div>
     <%= render 'layouts/footer'%>
-    <%= debug(params) if Rails.env.development?%>
-  </body>
+      <%= debug(params) if Rails.env.development?%>
+</body>
+
 </html>
